--- a/QuiestSH.html
+++ b/QuiestSH.html
@@ -50,24 +50,26 @@
         </h1>
         <p class="para">
             <img class="img3" src="sherlockholmesetwatson.webp" alt="logo">
-           <ul class="text">           
-           <li >Sherlock Holmes est un personnage de fiction britannique créé par Arthur Conan Doyle,</li>
-           <li>sa première aparition se fait dans le roman policier "Une étude en rouge" en 1887.</li>
-           <li>Sherlock Holmes se revendique la fonction de « détective privé consultant »:n'importe</li>
-           <li>qui peut le consulter, travaillant avec la police sans y être ratacher. Il est</li> 
-           <li>doté d'une mémoire remarquable pour tout ce qui peut l'aider à résoudre des crimes</li>
-           <li>,remarquant le moindre petit détail lié a son incroyable réféxion lui permet de faire des</li>
-           <li>déductions hors du commun. Lors de ses enquêtes Holmes est fréquemment accompagné du</li>
-           <li>docteur Watson,un medecin ainsi que véritable alter ego de Sherlock, qui narre le plus souvent</li>
-           <li>les aventures de celui-ci,mais c'est aussi et surtout l'ami du détective.</li>
-           <li>Sherlock Holmes habite au 221B Baker Street au cœur de Londre, commence son activité</li>
-           <li>professionnelle en 1878, il se passionne pour le violon et adore fummer la pipe. On le reconnait</li>
-           <li> par sa casquette avisière et a sa pipe mais aussi par sa loupe, montre a gousset et son violon </li>
-           <li>souvent représenter avec lui.Il à un frère,Mycroft Holmes,homme politique, qui travail pour</li>
-           <li>le gouvernement britanique. Un de ses plus grands énemies sera le professeur Moriarty,</li>
-           <li>redoutable génie du mal qui échapera plus d'une fois a Holmes qui le décrira comme le Napoléon</li>
-           <li>du crime.</li>
-        </ul>
+           <div class="text">
+             <p class="ligne">           
+           Sherlock Holmes est un personnage de fiction britannique créé par Arthur Conan Doyle,</br>
+           sa première aparition se fait dans le roman policier "Une étude en rouge" en 1887.</br>
+           Sherlock Holmes se revendique la fonction de « détective privé consultant »:n'importe</br>
+           qui peut le consulter, travaillant avec la police sans y être ratacher. Il est</br> 
+           doté d'une mémoire remarquable pour tout ce qui peut l'aider à résoudre des crimes</br>
+           ,remarquant le moindre petit détail lié a son incroyable réféxion lui permet de faire des</br>
+           déductions hors du commun. Lors de ses enquêtes Holmes est fréquemment accompagné du</br>
+           docteur Watson,un medecin ainsi que véritable alter ego de Sherlock, qui narre le plus souvent</br>
+           les aventures de celui-ci,mais c'est aussi et surtout l'ami du détective.</br>
+           Sherlock Holmes habite au 221B Baker Street au cœur de Londre, commence son activité</br>
+           professionnelle en 1878, il se passionne pour le violon et adore fummer la pipe. On le reconnait</br>
+            par sa casquette avisière et a sa pipe mais aussi par sa loupe, montre a gousset et son violon </br>
+           souvent représenter avec lui.Il à un frère,Mycroft Holmes,homme politique, qui travail pour</br>
+           le gouvernement britanique. Un de ses plus grands énemies sera le professeur Moriarty,</br>
+           redoutable génie du mal qui échapera plus d'une fois a Holmes qui le décrira comme le Napoléon
+           du crime.<br>
+          </p>
+        </div>
            
         </p>
     </div>
@@ -78,25 +80,27 @@
         <h2 class="titre"> Dr.Watson</h2>
         <p class="para">
             <img class="img4" src="Watson.webp" alt="logo">
-            <ul class="text">           
-             <li>Le docteur Watson de son nom complet John Watson, John H. Watson ou encore James Watson </li>
-             <li>selon les romans est un personnage de fiction créé par Arthur Conan Doyle. Watson est le meilleur</li> 
-             <li>ami du détective Sherlock Holmes et narrateur de presque toutes ses aventures, dans lesquelles</li>
-             <li>il joue le plus souvent un rôle actif. Watson est un medecin spécialiser en chirurgie, il</li>
-             <li>commença sa carrière en tant que medecin militaire mais suite a une blessure qui s'agrava</li>
-             <li>il fut rapatrié en angleterre où il rencontra Sherlock Holmes. En parallèle aux avnetures</li>
-             <li>dans les quelles Shelock l'entraine, Watson possède un cabinet privé qu'il due abandonné</li>
-             <li>de nombreuse fois pour suivre le détective. Il aidera beaucoup Sherlock Holmes notament</li>
-             <li>en l'empéchant de sombrer dans la cocaïne ou par des interogation sur l'enquête qui mirent</li>
-             <li>sur une piste Hollmes. Il se décrira comme "intime" amis de Sherlock en plus d'être </li>
-             <li>son colocataire et filet de sécurité contre ses tendances autodéstructice.</li>
-             <li>Si Watson ne se décrit jamais lui-même, il transparaît de ses histoires qu'il est</li>
-             <li>modeste, honnête, courageux, patient et loyal. Il a un caractère accommodant,</li>
-             <li>et pardonne à son colocataire toutes ses lubies, dans la mesure où elles ne le mettent</li>
-             <li>pas en danger, ainsi que ses vantardises. Bien que le détective se montre parfois</li>
-             <li>condescendant à son égard, Holmes le décrit comme un bon médecin, et il se révèle souvent</li>
-             <li>utile sur les scènes de crime, ils forment ainsi un duo complémentaire.</li>
-           </ul>
+            <div class="text">
+              <p class="ligne">           
+             Le docteur Watson de son nom complet John Watson, John H. Watson ou encore James Watson <br>
+             selon les romans est un personnage de fiction créé par Arthur Conan Doyle. Watson est le meilleur<br>
+             ami du détective Sherlock Holmes et narrateur de presque toutes ses aventures, dans lesquelles<br>
+             il joue le plus souvent un rôle actif. Watson est un medecin spécialiser en chirurgie, il<br>
+             commença sa carrière en tant que medecin militaire mais suite a une blessure qui s'agrava<br>
+             il fut rapatrié en angleterre où il rencontra Sherlock Holmes. En parallèle aux avnetures<br>
+             dans les quelles Shelock l'entraine, Watson possède un cabinet privé qu'il due abandonné<br>
+             de nombreuse fois pour suivre le détective. Il aidera beaucoup Sherlock Holmes notament<br>
+             en l'empéchant de sombrer dans la cocaïne ou par des interogation sur l'enquête qui mirent<br>
+             sur une piste Hollmes. Il se décrira comme "intime" amis de Sherlock en plus d'être <br>
+             son colocataire et filet de sécurité contre ses tendances autodéstructice.<br>
+             Si Watson ne se décrit jamais lui-même, il transparaît de ses histoires qu'il est<br>
+             modeste, honnête, courageux, patient et loyal. Il a un caractère accommodant,<br>
+             et pardonne à son colocataire toutes ses lubies, dans la mesure où elles ne le mettent<br>
+             pas en danger, ainsi que ses vantardises. Bien que le détective se montre parfois<br>
+             condescendant à son égard, Holmes le décrit comme un bon médecin, et il se révèle souvent<br>
+             utile sur les scènes de crime, ils forment ainsi un duo complémentaire.<br>
+                </p>
+            </div>
         </p>
     </div>
     <!--Partie succès-->
