--- a/Surecran.html
+++ b/Surecran.html
@@ -14,8 +14,9 @@
         <button class="subnavbtn">Histoire <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
           <a href="QuiestSH.html">Qui est Sherlock Holmes ?</a>
-          <a href="QuiestSH.html#Succes">Ses plus grands succès</a>
           <a href="QuiestSH.html#George">Dr.Watson</a>
+          <a href="QuiestSH.html#Succes">Les plus grandes oeuvres</a>
+
         </div>
       </div> 
       <div class="subnav">
