--- a/AuteurSH.html
+++ b/AuteurSH.html
@@ -21,7 +21,7 @@
       <div class="subnav">
         <button class="subnavbtn">Mythe ou réalité ? <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-          <a href="MytheSH.html">Personnage</a>
+          <a href="MytheSH.html">Mythe ou réalité ?</a>
           <a href="MytheSH.html#Anecdote">Anecdote </a>
         </div>
       </div> 
@@ -64,7 +64,7 @@
       <p >        
         <ul> 
           <li class="liste"> Cette page web a été crée par Marin Tahier, éléve du lycée <a href="https://www.touchard-washington.fr/">Touchard Washington</a> dans la ville Le Mans</li>
-          <li class="liste">Source : Wikipédia, google, youtube et moi</li>
+          <li class="liste">Source : Wikipédia, google, youtube,senscritique et moi</li>
           <li class="liste">Marin Tahier 1g9</li>
           <li class="liste">Adresse mail :<a href="Marin.Tahier@gmail.com">Marin.Tahier@gmail.com</a></li>
           <li class="liste">Merci d'avoir regarder cette page web</li>
@@ -74,4 +74,3 @@
     </div>
   </body>
 </html>
-
