--- a/MytheSH.html
+++ b/MytheSH.html
@@ -21,7 +21,7 @@
       <div class="subnav">
         <button class="subnavbtn">Mythe ou réalité ? <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-          <a href="MytheSH.html">Personnage</a>
+          <a href="MytheSH.html">Mythe ou réalité ?</a>
           <a href="MytheSH.html#Anecdote">Anecdote </a>
         </div>
       </div> 
@@ -48,8 +48,20 @@
             <h1 class="titre">
                 Mythe ou réalité ?
             </h1>
-            <p>
-            test
+            <p class="para">
+              <img class="img3">
+             <div class="text">
+               <p class="ligne">
+               Sherlock Holmes et les autres personnage du roman sont inventés par Conan Doyle,<br>
+               ils évoluent dans un univers normal à Londre au 19ème siècle notament dans l'apartement<br>
+               221B Baker street où vit Sherlock. L'éxistence réel de cet endroit contribue au<br> 
+               mythe de l'éxistence du détective et de son compagon, Watson, de plus que les enquêtes<br>
+               se déroule dans des lieux mysterieux tel que la lande des Baskervilles(Le chien des <br>
+               Baskervilles).La phrase culte de Sherlock, "Elementaire mon cher Watson", reste l'une <br>
+               des plus grandes référence au romans et a son personnage principal malgré le fait <br>
+               qu'il n'éxiste pas.<br> 
+               </p>
+             </div>
             </p>
         </div>
     
@@ -57,6 +69,19 @@
         <section id="Anecdote"/>
         <div class="erpara">
             <h2 class="titre">Anecdote</h2>
+            <p class="para">
+              <img class="img4">
+             <div class="text">
+               <p class="ligne">
+              Sherlock Holmes semblait si réel que de nombreuse personnes ont envoyés des lettres<br>
+              a l'apartement 221B Baker street dans lequel aurait vécu le célebre détective<br>
+              mais faute d'éxister c'est le véritable proprietaire de l'apartement qui recevait <br>
+              les lettres. Il en recevait tellement qu'il finit par vendre l'apartement au gouvrenement<br>
+              qui le transforma en musée sur Sherlock Holmes. Il éxiste de plus plein d'endroit <br>
+              axé sur Sherlock Holmes à Londre, comme par éxemple un escape game sur la série dédiée.<br>
+                </p>
+             </div>
+            </p>
         </div>
     
 
@@ -71,7 +96,7 @@
       <p >        
         <ul> 
           <li class="liste"> Cette page web a été crée par Marin Tahier, éléve du lycée <a href="https://www.touchard-washington.fr/">Touchard Washington</a> dans la ville Le Mans</li>
-          <li class="liste">Source : Wikipédia, google, youtube et moi</li>
+          <li class="liste">Source : Wikipédia, google, youtube,senscritique et moi</li>
           <li class="liste">Marin Tahier 1g9</li>
           <li class="liste">Adresse mail :<a href="Marin.Tahier@gmail.com">Marin.Tahier@gmail.com</a></li>
           <li class="liste">Merci d'avoir regarder cette page web</li>
