--- a/QuiestSH.html
+++ b/QuiestSH.html
@@ -21,7 +21,7 @@
       <div class="subnav">
         <button class="subnavbtn">Mythe ou réalité ? <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-          <a href="MytheSH.html">Personnage</a>
+          <a href="MytheSH.html">Mythe ou réalité ?</a>
           <a href="MytheSH.html#Anecdote">Anecdote </a>
         </div>
       </div> 
@@ -107,9 +107,81 @@
     <section id="Succes"/>
     <div class="erpara">
          <h2 class="titre">Les plus grandes oeuvres</h2>
+         <div class="aucentre">
+          <!--Tableau sur les dif livres-->
          <table>
-          
-         </table>    
+           <tr>
+            <th class="mediumcase">Nom</th>
+            <th class="grandecase">Présent dans </th>
+            <th class="petitecase">Note générale </th>
+           </tr>
+           <tr>
+              <td class="mediumcase">
+              1.Le Chien des Baskerville (1902)<br>
+              The Hound of the Baskervilles <br>
+              Sherlock Holmes, tome 5<br>
+              Sortie : 1902 (France)<br>
+              </td>
+              <td class="grandecase">
+              Les meilleurs polars<br>
+              Les meilleurs livres de monstres<br>
+              Les meilleurs thrillers<br>
+              Les meilleurs livres britanniques<br>
+              Les meilleurs livres de moins de 200 pages<br>
+              Les livres les plus appréciés à l'école<br>
+              Les livres avec les meilleurs méchants<br>
+              Les livres qui ont fait votre enfance<br>
+              Les meilleurs livres du XX° siècle<br>
+              Les livres les plus souvent relus<br>
+              Les lectures forcées et finalement adorées<br>
+              </td>
+              <td class="petitecase">7.5</td>
+           </tr>
+           <tr>
+            <td class="mediumcase">
+              2.Étude en rouge (1887)<br>
+              Sherlock Holmes, tome 1<br>
+              A Study in Scarlet<br>
+              Sortie : 1903 (France)<br>
+            </td>
+            <td class="grandecase">
+              Les meilleurs premiers romans d'auteurs<br>
+              Les meilleurs livres britanniques<br>
+              Les meilleurs livres de moins de 200 pages<br>
+              Les meilleurs polars<br>
+              Les livres qui ne peuvent se lire qu'en format papier<br>
+              Les meilleurs livres du XIX° siècle<br>
+            </td>
+            <td class="petitecase">7.7</td>
+         </tr>
+         <tr>
+            <td class="mediumcase">
+              3.Le Signe des Quatre (1890)<br>
+              Sherlock Holmes, tome 2<br>
+              The Sign of Four<br>
+              Sortie : 1890 (France)<br>
+            </td>
+            <td class="grandecase">
+              Les meilleurs livres britanniques<br>
+              Les meilleurs thrillers<br>
+            </td>
+            <td class="petitecase">7.4</td>
+          </tr>
+          <tr>
+            <td class="mediumcase">
+              4.Les Aventures de Sherlock Holmes (1892)<br>
+              Sherlock Holmes, tome 2<br>
+              The Adventures of Sherlock Holmes<br>
+              Sortie : 14 octobre 1892 (Royaume-Uni)<br>
+            </td>
+            <td class="grandecase">
+              Les meilleurs livres britanniques<br>
+              Les meilleurs polars<br>
+            </td>
+            <td class="petitecase">7.9</td>
+            </tr>
+         </table>
+        </div>    
     </div> 
 
     <!--Fin de page -->
@@ -123,7 +195,7 @@
       <p >        
         <ul> 
           <li class="liste"> Cette page web a été crée par Marin Tahier, éléve du lycée <a href="https://www.touchard-washington.fr/">Touchard Washington</a> dans la ville Le Mans</li>
-          <li class="liste">Source : Wikipédia, google, youtube et moi</li>
+          <li class="liste">Source : Wikipédia, google, youtube,senscritique et moi</li>
           <li class="liste">Marin Tahier 1g9</li>
           <li class="liste">Adresse mail :<a href="Marin.Tahier@gmail.com">Marin.Tahier@gmail.com</a></li>
           <li class="liste">Merci d'avoir regarder cette page web</li>
