--- a/MytheSH.html
+++ b/MytheSH.html
@@ -70,7 +70,7 @@
         <div class="erpara">
             <h2 class="titre">Anecdote</h2>
             <p class="para">
-              <img class="img4">
+              <img class="img4" src="221BBaker.webp">
              <div class="text">
                <p class="ligne">
               Sherlock Holmes semblait si réel que de nombreuse personnes ont envoyés des lettres<br>
@@ -82,6 +82,16 @@
                 </p>
              </div>
             </p>
+            <img class="img4" src="221BBaker.webp">
+        </div>
+        <div>
+          <table>
+            <tr>
+              <th>lol</th>
+              <th>lol</th>
+              <th>si sam arvhe</th>
+            </tr>
+          </table>
         </div>
     
 
