--- a/MytheSH.html
+++ b/MytheSH.html
@@ -49,7 +49,7 @@
                 Mythe ou réalité ?
             </h1>
             <p class="para">
-              <img class="img3">
+              <img class="img3" src="221BBaker.webp" alt="logo">
              <div class="text">
                <p class="ligne">
                Sherlock Holmes et les autres personnage du roman sont inventés par Conan Doyle,<br>
@@ -70,7 +70,7 @@
         <div class="erpara">
             <h2 class="titre">Anecdote</h2>
             <p class="para">
-              <img class="img4" src="221BBaker.webp">
+              <img class="img4" src="221BBaker.webp" alt="logo">
              <div class="text">
                <p class="ligne">
               Sherlock Holmes semblait si réel que de nombreuse personnes ont envoyés des lettres<br>
@@ -82,7 +82,7 @@
                 </p>
              </div>
             </p>
-            <img class="img4" src="221BBaker.webp">
+            <img class="img4" src="221BBaker.webp" alt="logo">
         </div>
         <div>
           <table>
