--- a/MytheSH.html
+++ b/MytheSH.html
@@ -49,7 +49,7 @@
                 Mythe ou réalité ?
             </h1>
             <p class="para">
-              <img class="img3" src="baker-street.webp" alt="logo">
+              <img class="img5" src="TheBaskervilles.webp" alt="logo">
              <div class="text">
                <p class="ligne">
                Sherlock Holmes et les autres personnage du roman sont inventés par Conan Doyle,<br>
@@ -82,22 +82,12 @@
                 </p>
              </div>
             </p>
-            <img class="img4" src="221BBaker.webp" alt="logo">
-        </div>
-        <div>
-          <table>
-            <tr>
-              <th>lol</th>
-              <th>lol</th>
-              <th>si sam arvhe</th>
-            </tr>
-          </table>
         </div>
     
 
     <!--Fin de page -->
     <section id="findepage"/>
-    <div class="espace"></div>
+    <div class="espacep"></div>
     <div class="Contact">
       <h1 class="titre">
         Contact et autres informations 
