--- a/MytheSH.html
+++ b/MytheSH.html
@@ -48,7 +48,7 @@
             <h1 class="titre">
                 Mythe ou réalité ?
             </h1>
-            <p class="para">
+            <p class="tailletextp">
               <img class="img5" src="TheBaskervilles.webp" alt="logo">
              <div class="text">
                <p class="ligne">
@@ -69,7 +69,7 @@
         <section id="Anecdote"/>
         <div class="erpara">
             <h2 class="titre">Anecdote</h2>
-            <p class="para">
+            <p class="tailletextp">
               <img class="img4" src="221BBaker.webp" alt="logo">
              <div class="text">
                <p class="ligne">
