--- a/AuteurSH.html
+++ b/AuteurSH.html
@@ -45,44 +45,44 @@
     <a  class="imgR"  href="#debutpage"><img class="img1" src="fleche-haut.webp" alt="logo"></a>
         <!--Auteur Conan Doyl-->
         <div class="block">
-            <h1 class="titre">
-                Arthur Conan Doyle
-            </h1>
-            <img class="img6" src="Conan_doyle.jpg" alt="logo";>
-            <p class="para">
-              <div class="text">
-                <p class="ligne">
-                  Arthur Conan Doyle né le 22 mai 1859, en tant que Arthur Ignatius Conan Doyle, à Édimbourg en Écosse<br>
-                  et mort le 7 juillet 1930 à Crowborough (Sussex de l'Est), est un écrivain et médecin écossais. Conan <br>
-                  est son troisième prénom et son nom de famille est Doyle, mais il signe la plupart de ses écrits <br>
-                  sous le nom de « A. Conan Doyle »,ce qui explique qu'il soit fréquemment désigné sous le nom de <br>
-                  « Conan Doyle ». <br>
-                  <br>
+          <h1 class="titre">
+              Arthur Conan Doyle
+          </h1>
+          <img class="img6" src="Conan_doyle.jpg" alt="logo";>
+          <p class="para">
+            <div class="text">
+              <p class="ligne">
+                Arthur Conan Doyle né le 22 mai 1859, en tant que Arthur Ignatius Conan Doyle, à Édimbourg en Écosse<br>
+                et mort le 7 juillet 1930 à Crowborough (Sussex de l'Est), est un écrivain et médecin écossais. Conan <br>
+                est son troisième prénom et son nom de famille est Doyle, mais il signe la plupart de ses écrits <br>
+                sous le nom de « A. Conan Doyle »,ce qui explique qu'il soit fréquemment désigné sous le nom de <br>
+                « Conan Doyle ». <br>
+                <br>
 
-                  Il doit sa célébrité à ses romans et nouvelles mettant en scène le détective Sherlock Holmes et, <br>
-                  dans une moindre mesure, le professeur Challenger. Cet écrivain prolifique a également été l'auteur <br>
-                  de pièces de théâtre et de poésies. <br>
-                  <br>
+                Il doit sa célébrité à ses romans et nouvelles mettant en scène le détective Sherlock Holmes et, <br>
+                dans une moindre mesure, le professeur Challenger. Cet écrivain prolifique a également été l'auteur <br>
+                de pièces de théâtre et de poésies. <br>
+                <br>
 
-                  Alors qu'il rêvait d'accéder à la reconnaissance littéraire par ses romans historiques<br>
-                  (La Compagnie Blanche, Sir Nigel), c'est finalement le roman policier qui permet à Doyle de passer<br>
-                  à la postérité. Les enquêtes de Sherlock Holmes, dont il entame l'écriture pour des raisons alimentaires,<br>
-                  connaîtront un triomphe populaire qui le dépassera largement, au point de parfois le rejeter.<br>
-                  Il en écrit toutefois quatre romans, le plus célèbre étant Le Chien des Baskerville, et cinquante-six<br>
-                  nouvelles, qui sont considérés comme une innovation majeure du genre policier, popularisant la figure<br>
-                  du détective plusieurs décennies avant les romans d'Agatha Christie. Ses personnages et son univers<br>
-                  restent omniprésents dans la culture populaire au xxie siècle, à travers une multitude d'hommages et<br>
-                  d'adaptations.<br>
-                  <br>
+                Alors qu'il rêvait d'accéder à la reconnaissance littéraire par ses romans historiques<br>
+                (La Compagnie Blanche, Sir Nigel), c'est finalement le roman policier qui permet à Doyle de passer<br>
+                à la postérité. Les enquêtes de Sherlock Holmes, dont il entame l'écriture pour des raisons alimentaires,<br>
+                connaîtront un triomphe populaire qui le dépassera largement, au point de parfois le rejeter.<br>
+                Il en écrit toutefois quatre romans, le plus célèbre étant Le Chien des Baskerville, et cinquante-six<br>
+                nouvelles, qui sont considérés comme une innovation majeure du genre policier, popularisant la figure<br>
+                du détective plusieurs décennies avant les romans d'Agatha Christie. Ses personnages et son univers<br>
+                restent omniprésents dans la culture populaire au xxie siècle, à travers une multitude d'hommages et<br>
+                d'adaptations.<br>
+                <br>
 
-                  Il est élevé au rang de Chevalier du Très vénérable ordre de Saint-Jean par le roi Édouard VII<br>
-                  le 24 octobre 1902 : il est donc le plus souvent nommé Sir Arthur Conan Doyle. Sur la fin de sa vie,<br>
-                  marqué par de nombreux deuils, il s'investit dans des causes ayant trait au surnaturel aujourd'hui<br>
-                  discréditées : ainsi, il défend le mouvement spiritualiste et soutient activement la thèse de l'existence<br>
-                  des fées de Cottingley.<br>
-                 </p>
-              </div>
-            </p>
+                Il est élevé au rang de Chevalier du Très vénérable ordre de Saint-Jean par le roi Édouard VII<br>
+                le 24 octobre 1902 : il est donc le plus souvent nommé Sir Arthur Conan Doyle. Sur la fin de sa vie,<br>
+                marqué par de nombreux deuils, il s'investit dans des causes ayant trait au surnaturel aujourd'hui<br>
+                discréditées : ainsi, il défend le mouvement spiritualiste et soutient activement la thèse de l'existence<br>
+                des fées de Cottingley.<br>
+              </p>
+            </div>
+          </p>
         </div>
         <!--mise en page-->
         <div>
@@ -102,7 +102,7 @@
           <li class="liste"> Cette page web a été crée par Marin Tahier, éléve du lycée <a href="https://www.touchard-washington.fr/">Touchard Washington</a> dans la ville Le Mans</li>
           <li class="liste">Source : Wikipédia, google, youtube,senscritique et moi</li>
           <li class="liste">Marin Tahier 1g9</li>
-          <li class="liste">Adresse mail :<a href="Marin.Tahier@gmail.com">Marin.Tahier@gmail.com</a></li>
+          <li class="liste">Adresse mail :<a href="mailto:Marin.Tahier@gmail.com">Marin.Tahier@gmail.com</a></li>
           <li class="liste">Merci d'avoir regarder cette page web</li>
           <li class="liste">Année: 2023-2024</li>
         </ul>
