--- a/Surecran.html
+++ b/Surecran.html
@@ -79,7 +79,7 @@
           <li class="liste"> Cette page web a été crée par Marin Tahier, éléve du lycée <a href="https://www.touchard-washington.fr/">Touchard Washington</a> dans la ville Le Mans</li>
           <li class="liste">Source : Wikipédia, google, youtube,senscritique et moi</li>
           <li class="liste">Marin Tahier 1g9</li>
-          <li class="liste">Adresse mail :<a href="mailto:Marin.Tahier@gmail.com">Marin.Tahier@gmail.com</a></li>
+          <li class="liste">Adresse mail :<a href="mailto:marin.tahier@gmail.com">marin.tahier@gmail.com</a></li>
           <li class="liste">Merci d'avoir regarder cette page web</li>
           <li class="liste">Année: 2023-2024</li>
         </ul>
