--- a/Surecran.html
+++ b/Surecran.html
@@ -35,8 +35,8 @@
       <div class="subnav">
         <button class="subnavbtn">Sur écrans<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-          <a href="Surecran.html">Les differentes séries</a>
-          <a href="Surecran.html#recompenses">Et récompenses obtenues</a>
+          <a href="Surecran.html">Les differents filmes</a>
+          <a href="Surecran.html#recompenses">Les séries</a>
         </div>
       </div>
       <a href="#findepage">Contact et autres informations</a>
@@ -47,10 +47,45 @@
         <!--Les differentes séries-->
         <div>
             <h1 class="titre">
-                Les differentes séries
+                Les differents filmes 
             </h1>
             <p>
-            test
+            <ul>
+              <li>Terence Fisher</li>
+                <ul>
+                  <li>Le Chien des Baskerville (1959)</li>
+                </ul>
+              <li>Sidney Lanfield</li>
+                <ul>
+                  <li>Le Chien des Baskerville (1939)</li>
+                </ul>
+              <li>Guy Ritchie</li>
+                <ul>
+                  <li>Sherlock Holmes : Jeu d'ombres (2011)</li>
+                  <li>Sherlock Holmes (2009)</li>
+                </ul>
+              <li>Roy William Neill</li>
+                <ul>
+                  <li>Échec à la mort (1943)</li>
+                  <li>La Griffe sanglante (1944)</li>
+                  <li>La Maison de la peur (1945)</li>
+                  <li>La Femme en vert (1945)</li>
+                  <li>La Femme aux araignées (1943)</li>
+                  <li>La Perle des Borgia (1944)</li>
+                  <li>Le Train de la mort (1946)</li>
+                  <li>La Clef (1946)</li>
+                  <li>Sherlock Holmes à Washington (1943)</li>
+                </ul>
+              <li>Alfred L. Werker</li>
+                <ul>
+                  <li>Sherlock Holmes (1939)</li>
+                </ul>
+              <li>John Rawlins</li>
+                <ul>
+                  <li>Sherlock Holmes et la Voix de la terreur (1942)</li>
+                </ul>
+            </ul>
+            <img class="img3" src="affichefilm.webp" alt="logo">
             </p>
         </div>
         <a  class="imgR"  href="#debutpage"><img class="img1" src="fleche-haut.webp" alt="logo"></a>
@@ -59,10 +94,10 @@
         <section id="recompenses">
         <div class="erpara">
             <h1 class="titre">
-                Les récompenses obtenues
+                Les séries
             </h1>
             <p>
-            test
+            nada rien caput
             </p>
         </div>
 
