--- a/SherlockHolmes.html
+++ b/SherlockHolmes.html
@@ -34,8 +34,8 @@
       <div class="subnav">
         <button class="subnavbtn">Sur écrans<i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
-          <a href="Surecran.html">Les differentes séries</a>
-          <a href="Surecran.html#recompenses">Et récompenses obtenues</a>
+          <a href="Surecran.html">Les differents filmes</a>
+          <a href="Surecran.html#recompenses">Les séries</a>
         </div>
       </div>
       <a href="#findepage">Contact et autres informations</a>
