--- a/Surecran.html
+++ b/Surecran.html
@@ -51,6 +51,10 @@
             </h1>
             <p>
             <ul>
+              <img class="img7" src="affichefilm.webp" alt="logo">
+              <br>
+              <br>
+              <br>
               <li>Terence Fisher</li>
                 <ul>
                   <li>Le Chien des Baskerville (1959)</li>
@@ -85,11 +89,11 @@
                   <li>Sherlock Holmes et la Voix de la terreur (1942)</li>
                 </ul>
             </ul>
-            <img class="img3" src="affichefilm.webp" alt="logo">
             </p>
         </div>
-        <a  class="imgR"  href="#debutpage"><img class="img1" src="fleche-haut.webp" alt="logo"></a>
-        <a href="https://www.youtube.com/watch?v=IKR62lCxCk0&ab_channel=YoutubeInfinity">Trailer Sherlock</a>
+        <br>
+        <br>
+        <br>       
         <!--Les récompenses obtenues-->
         <section id="recompenses">
         <div class="erpara">
@@ -97,7 +101,8 @@
                 Les séries
             </h1>
             <p>
-            nada rien caput
+            <!--vidéeo youtube -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1cMvdOr9QEg?si=_T72CyyDlibb6gon" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </p>
         </div>
 
