--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
             </p>
         </div>
         <img src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
-        <img src="c:\Users\MARIN.TAHIER\OneDrive - Conseil Régional des Pays de La Loire - Direction des Lycées\Documents\GitHub\Marinthrbabysitting.github.io\août-2024-calendrier-fr12.jpg" alt="logo";>
+        <img src="août-2024-calendrier-fr12.jpg" alt="logo";>
     </body>
 </html>
