--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="Calendrier.css" rel="stylesheet" style="text/css">
     </head>
+    <img id="fondecran" src="fond-ete-colore.webp" alt="logo";>
+    <img id="fondecran2" src="fond-ete-colore.webp" alt="logo";>
     <body>
         <div>
             <h1 id="Titre">Calendrier des disponibilité</h1>
@@ -13,11 +15,8 @@
                 une case est vide je suis disponible toute la journée et dans le cas contraire
                 un message précisera la durée où je ne serais pas disponible.
             </p>
-            <p>
-                
-            </p>
         </div>
-        <img src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
-        <img src="août-2024-calendrier-fr12.jpg" alt="logo";>
+        <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
+        <img id="calendrier" src="août-2024-calendrier-fr12.jpg" alt="logo";>
     </body>
 </html>
