--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <h1 id="Titre">Calendrier des disponibilité</h1>
             <p>
                 Voici un calendrier donnant mes disponibilités, je l'actualise dés que je peux
-                en fonction des demandes reçues et si je ne suis pas disponible.<br> Dans le cas où 
+                en fonction des demandes reçues.<br> Dans le cas où 
                 une case est vide je suis disponible toute la journée et dans le cas contraire
-                un message précisera la durée où je ne serais pas disponible.
+                un message précisera la durée où je suis réserver.
             </p>
         </div>
         <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
