--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 Voici un calendrier donnant mes disponibilités, je l'actualise dés que je peux
                 en fonction des demandes reçues.<br> Dans le cas où 
                 une case est vide je suis disponible toute la journée et dans le cas contraire
-                un message précisera la durée où je suis réserver.
+                un message précisera la durée où je suis réservé.
             </p>
         </div>
         <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
