--- a/sitecalendrierbabysitting.html
+++ b/sitecalendrierbabysitting.html
@@ -4,20 +4,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="Calendrier.css" rel="stylesheet" style="text/css">
     </head>
+    <img id="fondecran" src="fond-ete-colore.webp" alt="logo";>
+    <img id="fondecran2" src="fond-ete-colore.webp" alt="logo";>
     <body>
         <div>
             <h1 id="Titre">Calendrier des disponibilité</h1>
             <p>
                 Voici un calendrier donnant mes disponibilités, je l'actualise dés que je peux
-                en fonction des demandes reçues et si je ne suis pas disponible.<br> Dans le cas où 
+                en fonction des demandes reçues.<br> Dans le cas où 
                 une case est vide je suis disponible toute la journée et dans le cas contraire
-                un message précisera la durée où je ne serais pas disponible.
-            </p>
-            <p>
-                
+                un message précisera la durée où je suis occupé.
             </p>
         </div>
-        <img src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
-        <img src="c:\Users\MARIN.TAHIER\OneDrive - Conseil Régional des Pays de La Loire - Direction des Lycées\Documents\GitHub\Marinthrbabysitting.github.io\août-2024-calendrier-fr12.jpg" alt="logo";>
+        <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
+        <img id="calendrier" src="août-2024-calendrier-fr12.jpg" alt="logo";>
     </body>
 </html>
