--- a/index.html
+++ b/index.html
@@ -1,22 +1,73 @@
 <html>
-    <head>
-        <title>Calendrier</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="Calendrier.css" rel="stylesheet" style="text/css">
-    </head>
-    <img id="fondecran" src="fond-ete-colore.webp" alt="logo";>
-    <img id="fondecran2" src="fond-ete-colore.webp" alt="logo";>
-    <body>
-        <div>
-            <h1 id="Titre">Calendrier des disponibilité</h1>
-            <p>
-                Voici un calendrier donnant mes disponibilités, je l'actualise dés que je peux
-                en fonction des demandes reçues.<br> Dans le cas où 
-                une case est vide je suis disponible toute la journée et dans le cas contraire
-                un message précisera la durée où je suis occupé.
-            </p>
+  <head>
+    <title>Sherlock Holmes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="SherlockHolmescss.css" rel="stylesheet" style="text/css">
+  </head>
+  <body>
+    <!--Bar navigation-->
+    <section id="debutpage"/>
+    <div class="navbar">
+      <a href="SherlockHolmes.html">Accueil</a>
+      <div class="subnav">
+        <button class="subnavbtn">Histoire <i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+          <a href="QuiestSH.html">Qui est Sherlock Holmes ?</a>
+          <a href="QuiestSH.html#George">Dr.Watson</a>
+          <a href="QuiestSH.html#Succes">Les plus grandes oeuvres</a>
         </div>
-        <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
-        <img id="calendrier" src="août-2024-calendrier-fr12.jpg" alt="logo";>
-    </body>
+      </div> 
+      <div class="subnav">
+        <button class="subnavbtn">Mythe ou réalité ? <i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+          <a href="MytheSH.html">Mythe ou réalité ?</a>
+          <a href="MytheSH.html#Anecdote">Anecdote </a>
+        </div>
+      </div> 
+      <div class="subnav">
+        <button class="subnavbtn">Auteur <i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+          <a href="AuteurSH.html">Arthur Conan Doyle</a>
+        </div>
+      </div>
+      <div class="subnav">
+        <button class="subnavbtn">Sur écrans<i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+          <a href="Surecran.html">Les differents filmes</a>
+          <a href="Surecran.html#recompenses">Les séries</a>
+        </div>
+      </div>
+      <a href="#findepage">Contact et autres informations</a>
+    </div>
+
+    <!--Début contenue page-->
+    <a href="#debutpage"><img class="img1" src="fleche-haut.webp" alt="logo"></a>
+    <div>
+      <h3 class="titre">Accueil</h3>
+      <h3 class="titre">Sherlock Holmes</h3>
+      <p></p>
+    </div>
+    <img class="img2" src="Sherlockombre.webp" alt="logo">
+
+    <!--Fin de page -->
+    <section id="findepage"/>
+    <div class="espace"></div>
+    <div class="Contact">
+      <h1 class="titre">
+        Contact et autres informations 
+        <img class="logo" src="1573628671logo_nsi.png" alt="logo";>
+      </h1>
+      <p >        
+        <ul> 
+          <li class="liste"> Cette page web a été crée par Marin Tahier, éléve du lycée <a href="https://www.touchard-washington.fr/">Touchard Washington</a> dans la ville Le Mans</li>
+          <li class="liste">Source : Wikipédia, google, youtube,senscritique et moi</li>
+          <li class="liste">Marin Tahier 1g9</li>
+          <li class="liste">Adresse mail :<a href="mailto:marin.tahier@gmail.com">marin.tahier@gmail.com</a></li>
+          <li class="liste">Merci d'avoir regarder cette page web</li>
+          <li class="liste">Année: 2023-2024</li>
+        </ul>
+      </p>
+    </div>
+  </body>
 </html>
