--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 une case est vide je suis disponible toute la journée.
             </p>
         </div>
-        <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
-        <img id="calendrier" src="août-2024-calendrier-fr12.jpg" alt="logo";>
+        <img id="calendrier" src="août-2024-calendrier-fr12.png" alt="logo";>
     </body>
 </html>
