--- a/sitecalendrierbabysitting.html
+++ b/sitecalendrierbabysitting.html
@@ -12,8 +12,7 @@
             <p>
                 Voici un calendrier donnant mes disponibilités, je l'actualise dés que je peux
                 en fonction des demandes reçues.<br> Dans le cas où 
-                une case est vide je suis disponible toute la journée et dans le cas contraire
-                un message précisera la durée où je suis occupé.
+                une case est vide je suis disponible toute la journée.
             </p>
         </div>
         <img id="calendrier" src="juillet-2024-calendrier-fr1.jpg" alt="logo";>
