--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
         <link href="Calendrier.css" rel="stylesheet" style="text/css">
     </head>
     <img id="fondecran" src="fond-ete-colore.webp" alt="logo";>
-    <img id="fondecran2" src="fond-ete-colore.webp" alt="logo";>
     <body>
         <div>
             <h1 id="Titre">Calendrier des disponibilité</h1>
-            <p>
+            <p class="texte">
                 Voici un calendrier donnant mes disponibilités, je l'actualise dés que je peux
                 en fonction des demandes reçues.<br> Dans le cas où 
                 une case est vide je suis disponible toute la journée.
             </p>
         </div>
         <img id="calendrier" src="août-2024-calendrier-fr12.png" alt="logo";>
+        <!--Me contacter -->
+    <section id="findepage"/>
+    <div class="Contact">
+      <h1 class="titre">
+        Contactes
+      </h1>
+      <p >        
+        <ul> 
+          <li class="liste">Adresse mail :<a href="mailto:marin.tahier@gmail.com">marin.tahier@gmail.com</a></li>
+          <li class="liste">0676660243</li>
+        </ul>
+      </p>
+    </div>
     </body>
 </html>
