--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="Calendrier.css" rel="stylesheet" style="text/css">
     </head>
     <img id="fondecran" src="fond-ete-colore.webp" alt="logo";>
+    <img id="fondecran2" src="fond-ete-colore.webp" alt="logo";>
     <body>
         <div>
             <h1 id="Titre">Calendrier des disponibilité</h1>
